[gd_scene load_steps=14 format=3 uid="uid://hynsll4jq3n2"]

[ext_resource type="Script" path="res://Scripts/playerMovementScripts/player.gd" id="1_a7j60"]
[ext_resource type="Resource" uid="uid://dljcnxkua4rf" path="res://Scripts/playerMovementScripts/player_vars.tres" id="2_graem"]
[ext_resource type="Texture2D" uid="uid://da72e4jxersy2" path="res://images/icon.svg" id="3_imbja"]
[ext_resource type="Script" path="res://Scripts/stateMachine.gd" id="4_oxk7l"]
[ext_resource type="Script" path="res://Scripts/playerMovementScripts/Run.gd" id="5_mty1n"]
[ext_resource type="Script" path="res://Scripts/playerMovementScripts/Air.gd" id="6_vmmom"]
[ext_resource type="Script" path="res://Scripts/playerMovementScripts/Standing.gd" id="7_jr32t"]
[ext_resource type="Script" path="res://Scripts/playerMovementScripts/Crouching.gd" id="8_uw634"]
[ext_resource type="Script" path="res://Scripts/playerMovementScripts/Crouched.gd" id="9_1hcmd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_65t5e"]
albedo_texture = ExtResource("3_imbja")

[sub_resource type="BoxMesh" id="BoxMesh_usx7c"]
material = SubResource("StandardMaterial3D_65t5e")
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_e6d52"]
margin = 0.001
size = Vector3(1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4pade"]
size = Vector3(1, 0.8, 1)

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_a7j60")
stats = ExtResource("2_graem")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_usx7c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_e6d52")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="SpringArm3D" parent="TwistPivot"]
spring_length = 8.0
margin = 0.5

[node name="view" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 0.965925, -0.258819, 0, 0.258819, 0.965925, 0, 0, -1)
fov = 110.0

[node name="activityMachine" type="Node" parent="."]
script = ExtResource("4_oxk7l")
initial_state = NodePath("Run")

[node name="Run" type="Node" parent="activityMachine"]
script = ExtResource("5_mty1n")

[node name="Air" type="Node" parent="activityMachine"]
script = ExtResource("6_vmmom")

[node name="standingMachine" type="Node" parent="."]
script = ExtResource("4_oxk7l")
initial_state = NodePath("Standing")

[node name="Standing" type="Node" parent="standingMachine"]
script = ExtResource("7_jr32t")

[node name="Crouching" type="Node" parent="standingMachine"]
script = ExtResource("8_uw634")

[node name="Crouched" type="Node" parent="standingMachine"]
script = ExtResource("9_1hcmd")

[node name="Headbonk" type="ShapeCast3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_4pade")
target_position = Vector3(0, -1.3, 0)

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
